- 2.4.16
    - Add metal golem equipments
    - Fix rendering of decorative layers on golems with size upgrade
    - Make golem give up target after 5 seconds not approaching
    - Make player not picking up items when dead
    - Add config cards:
        - configure default golem mode when summoned
        - configure summon location: old position or current location
        - limit wand targets
    - Add CEI compat

- 2.4.15
    - Fix non-owner being able to change humanoid equipment
    - Add Create deployer automation for upgrades
    - Golem now will only access chest within <2 blocks, and only access them in standing mode

- 2.4.14
    - Golems will attack enemies touching it first
    - Fix shield block sound
    - Now humanoid can open doors
    - Fix grindstone remove upgrade

- 2.4.13
    - Fix advancement logspam
    - Add config for distances starting to go back (default 10 for following, 20 for wandering)
    - Add config for distances golem would be forced to teleport back (default 30)
    - Humanoid can now ride horse
    - Now humanoid golem riding dog golem will control dog golem
    - Add dog golem ridden speed factor to config
    - Golems ridden or riding other living entities as controller can also teleport to player
    - Golems summoned in creative will also consume stack

- 2.4.12
    - Fix golem not following player under water with swim upgrade
    - Increase golem speed under water
    - Fix golem always  trying to float up even when player is deep under water
    - Now pickup upgrade will not destroy item when owner is present
    - Humanoid and dog golem are no longer knock back resistant
    - Add knockback resistance to materials
    - Fix custom Goals not added to golems when reloading world
    - Increase command wand target range
    - Improve command wand message when ordering entities to attack others

- 2.4.11
    - Fix golem not teleport to player when having an attack target