@@ -1,13 +1,16 @@
 - 2.4.16
-    - Add metal golem equipments
+    - Add metal golem armors
     - Fix rendering of decorative layers on golems with size upgrade
     - Make golem give up target after 5 seconds not approaching
     - Make player not picking up items when dead
+    - Add CEI compat
+    - Add Attribute tab
     - Add config cards:
         - configure default golem mode when summoned
         - configure summon location: old position or current location
         - limit wand targets
-    - Add CEI compat
+        - configure lock interaction
+        - pickup upgrade item filter
 
 - 2.4.15
     - Fix non-owner being able to change humanoid equipment
